welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: not enough arguments for method courir: (nbPas: Int)Unit.
Unspecified value parameter nbPas.
		courir()(hauteur - litMessage());
                      ^